# eco_trade_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.prod.yaml  compose.yaml  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_lote_scheduling.py  0003_alter_lote_image_url.py
api/services/: authentication_service.py
core/: exceptions.py  settings.py  urls.py  views.py
