[project]
name = "eco-trade-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Oliveira",email = "flipeaz342@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg (>=3.3.3,<4.0.0)",
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "psycopg-binary (>=3.3.3,<4.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
